2007-10-30  Reiner Steib  <Reiner.Steib@gmx.de>

	* toolbar-x.el (toolbarx-find-image): Rename argument.  Improve
	doc string.

2007-10-11  Ralf Angeli  <angeli@caeruleus.net>

	* latex.el (TeX-arg-verb): Honor active region.

2007-10-10  Ralf Angeli  <angeli@caeruleus.net>

	* style/MinionPro.el ("MinionPro"): Run style hook for amsmath
	which is loaded via MnSymbol.

2007-10-09  Ralf Angeli  <angeli@caeruleus.net>

	* style/nomencl.el: New file.

	* Makefile.in (STYLESRC): Add style/nomencl.el.

2007-10-03  Ralf Angeli  <angeli@caeruleus.net>

	* font-latex.el (font-latex-user-keyword-classes): Doc fix.

2007-08-26  Ralf Angeli  <angeli@caeruleus.net>

	* font-latex.el (font-latex-command-with-args-default-spec):
	Default to nil.

2007-08-24  Ralf Angeli  <angeli@caeruleus.net>

	* font-latex.el (font-latex-match-command-with-arguments): Show
	error indicator only in LaTeX mode.

2007-08-23  Ralf Angeli  <angeli@caeruleus.net>

	* style/nicefrac.el ("nicefrac"): Fix last change.

2007-08-22  Ralf Angeli  <angeli@caeruleus.net>

	* style/jurabib.el ("jurabib"): Use `font-latex-add-keywords'.
	Add syntax information.

2007-08-21  Ralf Angeli  <angeli@caeruleus.net>

	* style/scrreprt.el: Add licence text.
	("scrreprt"): Use `font-latex-add-keywords'.  Add syntax
	information.

	* style/scrpage2.el: Add licence text.
	("scrpage2"): Use `font-latex-add-keywords'.  Add syntax
	information.

	* style/scrlttr2.el: Add licence text.
	("scrlttr2"): Use `font-latex-add-keywords'.  Add syntax
	information.

	* style/scrbook.el ("scrbook"): Use `font-latex-add-keywords'.
	Add syntax information.

	* style/scrbase.el ("scrbase"): Use `font-latex-add-keywords'.
	Add syntax information.

2007-08-20  Ralf Angeli  <angeli@caeruleus.net>

	* style/url.el ("url"): Use `font-latex-add-keywords'.
	Add syntax information.

	* style/subfigure.el ("subfigure"): Use `font-latex-add-keywords'.
	Add syntax information.

	* style/csquotes.el ("csquotes"): Update for version 3.7.  Use